# cheezy-engine

./: .gitignore  CMakeLists.txt  README.md  attacks.cpp  attacks.h  engine.cpp  evaluation.cpp  evaluation.h  magic_generation.cpp  magic_rng.h  main  main.cpp  move.h  move_generator.cpp  move_generator.h  move_utility.cpp  move_utility.h  perft  perft.cpp  piece.h  position.h  search  search.cpp  search.h
extra/: magic_generation.cpp  perft.cpp
src/: evaluation.cpp  evaluation.h  move.h  move_generator.cpp  move_generator.h  move_utility.cpp  move_utility.h  piece.h  play.cpp  play_dbg  position.cpp  position.h  search.cpp  search.h
